# loopforge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.loopforge/: experiment_guide.md  lessons_learned.md  objective.md  ops_access_guide.md
src/loopforge/: __init__.py  auto_adapter.py  bootstrap.py  cli.py  pilot_adapters.py
src/loopforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/loopforge/core/: __init__.py  agentic_execution.py  backends.py  bootstrap_contracts.py  memory.py  orchestrator.py  runtime.py  tool_use_execution.py  types.py
tests/: conftest.py  support.py  test_bootstrap.py  test_cli.py  test_experimentation_loop.py  test_integration_loopforge.py  test_pilot_adapters.py  test_slow_loopforge.py  test_unit_loopforge.py
tests/core/: test_agentic_execution.py  test_backends.py  test_bootstrap_contracts.py  test_memory.py  test_orchestrator.py  test_tool_use_execution.py
