[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopforge"
version = "0.1.0"
description = "Human-steerable iterative experimentation loops with fresh worker, reflection, and review agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.61.0",
    "boto3>=1.34.0",
    "python-dotenv[test]>=1.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
loopforge = "loopforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=test-output/pytest"
cache_dir = "test-output/pytest-cache"
